--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 Name: Nuthathai Poolsawat
 ID: 662115029
 
-<img src="C:\Users\DELL\OneDrive - Chiang Mai University\Desktop\Lab 1\me.png" alt="My image">
+<img src="C:\Users\DELL\OneDrive - Chiang Mai University\Desktop\Lab 1\spidy.jpg" alt="Spidy image">
