--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 Name: Nuthathai Poolsawat
 ID: 662115029
 
+Spidy name: Lady
+Spidy lastname: Gaga
+
 <img src="C:\Users\DELL\OneDrive - Chiang Mai University\Desktop\Lab 1\spidy.jpg" alt="Spidy image">
