--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 Name: Nuthathai Poolsawat
 ID: 662115029
 
+New details: not spiderman
+
 <img src="C:\Users\DELL\OneDrive - Chiang Mai University\Desktop\Lab 1\me.png" alt="My image">
