add menu to index.html and add spider image to the new.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu Example</title>
+</head>
+<body>
+    <label for="menu">Choose an option:</label>
+    <select id="menu" name="menu">
+        <option value="me">Me</option>
+        <option value="spidy">Spidy</option>
+    </select>
+</body>
+</html>
+
+
 Name: Nuthathai Poolsawat
 ID: 662115029
 
