--- a/new.html
+++ b/new.html
@@ -1,2 +1,4 @@
 Spidy name: Lady
 Spidy lastname: Gaga
+
+<img src="C:\Users\DELL\OneDrive - Chiang Mai University\Desktop\Lab 1\spidy.jpg" alt="Spider image">
