--- a/new.html
+++ b/new.html
@@ -1,3 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu Example</title>
+    <script>
+        function openNewPage(option) {
+            if (option === "spidy") {
+                window.location.href = "new.html"; // Navigate to new.html
+            }
+        }
+    </script>
+</head>
+<body>
+    <label for="menu">Choose an option:</label>
+    <select id="menu" onchange="openNewPage(this.value)">
+        <option value="">--Select--</option>
+        <option value="me">Me</option>
+        <option value="spidy">Spidy</option>
+    </select>
+</body>
+</html>
+
 Spidy name: Lady
 Spidy lastname: Gaga
 
